--- a/Code/css/style.css
+++ b/Code/css/style.css
@@ -3,6 +3,9 @@
     margin: 0px;
     padding: 0px;
     font-family: sans-serif;
+    border: none;
+    cursor: default;
+    -webkit-user-select: none;
 /*    border: solid blue 2px;*/
 }
 
@@ -137,3 +140,11 @@ body
 }
 
 /* CONTROLLER */
+#controllerBox
+{
+    position: absolute;
+    width: 537px;
+    height: 513px;
+    top: 40px;
+    left: 360px;
+}
