--- a/Code/css/controller.css
+++ b/Code/css/controller.css
@@ -58,15 +58,42 @@
     border-radius: 50%;
 }
 
+.rectangleButton
+{
+    position: absolute;
+    width: 50px;
+    height: 22px;
+    font-size: 16px;
+    text-align: center;
+    line-height: 36px;
+    border-radius: 2px;
+}
+
 .stick
 {
     position: absolute;
-    width: 200px;
-    height: 200px;
+    width: 90px;
+    height: 90px;
     font-size: 16px;
     text-align: center;
     line-height: 200px;
     border-radius: 50%;
+    top: 50%;
+    left: 50%;
+    margin-top: -45px;
+    margin-left: -45px;
+}
+
+.rectangleLeft
+{
+    top: 0px;
+    left: 0px;
+}
+
+.rectangleRight
+{
+    top: 0px;
+    right: 0px;
 }
 
 .buttonTop
@@ -141,4 +168,26 @@
 {
     top: 0px;
     left: 30px;
+}
+
+#rectangleButtons
+{
+    position: absolute;
+    width: 150px;
+    height: 22px;
+    top: 280px;
+    left: 50%;
+    margin-left: -75px;
+}
+
+#stickGroupLeft
+{
+    top: 175px;
+    left: 30px;
+}
+
+#stickGroupRight
+{
+    top: 350px;
+    right: 30px;
 }
