--- a/Code/css/controller.css
+++ b/Code/css/controller.css
@@ -26,7 +26,7 @@
     height: 25px;
     font-size: 16px;
     text-align: center;
-    line-height: 50px;
+    line-height: 25px;
     bottom: 0px;
     left: 50%;
     margin-left: -50%;
@@ -40,7 +40,7 @@
     height: 70px;
     font-size: 16px;
     text-align: center;
-    line-height: 100px;
+    line-height: 70px;
     top: 20px;
     left: 50%;
     margin-left: -16px;
@@ -65,23 +65,36 @@
     height: 22px;
     font-size: 16px;
     text-align: center;
-    line-height: 36px;
+    line-height: 22px;
     border-radius: 2px;
 }
 
-.stick
+.stickButton
 {
     position: absolute;
     width: 90px;
     height: 90px;
     font-size: 16px;
     text-align: center;
-    line-height: 200px;
+    line-height: 90px;
     border-radius: 50%;
     top: 50%;
     left: 50%;
     margin-top: -45px;
     margin-left: -45px;
+}
+
+.stick
+{
+    position: absolute;
+    width: 14px;
+    height: 14px;
+    border-radius: 50%;
+    top: 50%;
+    left: 50%;
+    margin-top: -7px;
+    margin-left: -7px;
+    background-color: rgb(0, 90, 150);
 }
 
 .rectangleLeft
